--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@
     </div>
   </main>
 
-  <script src="{{ '/assets/js/metro.js' | relative_url }}" defer></script>
+  <script src="{{ '../assets/js/metro.js' | relative_url }}" defer></script>
 
   <script>
     const header = document.getElementById('pageHeader');
