--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>{{ site.title }}</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
+<meta charset="UTF-8" />
+<title>{{ page.title | default: site.title }}</title>
+<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 </head>
