--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     </div>
   </main>
 
-  <script src="{{ '/assets/js/metro.js' | relative_url }}" defer></script>
+  <script src="{{ '../assets/js/metro.js' | relative_url }}" defer></script>
 
   <script>
     const header = document.getElementById('pageHeader');
