--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
       {% endif %}
     </ul> -->
 
-    <p class="copyright">&#9829; Come talk to me ;) &#9829;</p>
+    <p class="copyright">&#9829; Talk to me, work up a vibe ;) &#9829;</p>
   </footer>
 
 <!-- Scripts -->
