--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="page-header hero fluent-enter delay-1">
-  <h1>{{ page.title }}</h1>
+  <h1>{{ page.title }}</h1><br/>
 </header>
 
 <script>
